<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/gray_blue_radius_background"
        android:backgroundTint="@color/windowBackground"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abel"
            android:textSize="@dimen/_16ssp"
            android:layout_gravity="center"
            android:gravity="center"
            tools:text="@string/log_out" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:fontFamily="@font/abel"
            tools:text="@string/logout_message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBtnCancel"
                android:background="@drawable/button_shape_secoundry"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/white"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/cancel"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvBtnOk"
                android:background="@drawable/button_shape_primary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/white"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/ok"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>



    </LinearLayout>
</RelativeLayout>