<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.VipMusicFragment">

        <com.zenimmersive.android.helper.StatusBarSizeView
            android:id="@+id/statusBarSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:text="@string/my_vip"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:fontFamily="@font/averia_libre" />

            <TextView
                android:id="@+id/tvNewCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_15sdp"
                android:background="@drawable/red_darkred_radius_bg"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/new_keyword"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                app:fontFamily="@font/averia_libre" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvVipSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:nestedScrollingEnabled="true"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tvRecentlyPlayed"
            tools:itemCount="4"
            tools:listitem="@layout/recently_played_item" />

        <LinearLayout
            android:id="@+id/llNotFoundData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_40sdp"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:src="@drawable/ic_not_found" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/we_re_sorry"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:fontFamily="@font/abel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_can_t_find_anything"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:fontFamily="@font/abel" />
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/invLoader"
        layout="@layout/view_loader" />
</FrameLayout>