<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.MyOrdersActivity">

    <com.zenimmersive.android.helper.StatusBarSizeView
        android:id="@+id/statusBarSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:layout_below="@id/statusBarSpace"
        android:minHeight="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:gravity="center"
            android:text="@string/list_of_my_orders"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:fontFamily="@font/inter" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/_10sdp"
        android:clipToPadding="false"
        android:visibility="gone"
        android:paddingBottom="@dimen/_20sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:itemCount="12"
        tools:listitem="@layout/my_orders_item" />

    <LinearLayout
        android:id="@+id/llNotFoundData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_40sdp"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/ic_not_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/we_re_sorry"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            app:fontFamily="@font/abel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_can_t_find_anything"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:fontFamily="@font/abel" />
    </LinearLayout>

</LinearLayout>